# picsellia-demo-application

./: .env.dist  .gitignore  README.md  config.py  main.py  picsellia_app.py  pyproject.toml  requirements.txt
